# NMD-Scanner

./: .gitignore  License  Notes on NMD_Scanner  README.md  create_test_VCF.ipynb  environment-dev.yaml  pyproject.toml  train.ipynb
.ipynb_checkpoints/: create_test_VCF-checkpoint.ipynb  test_variants-checkpoint.vcf
resources/: README.md  chr18.fa.gz.fai  chr18.fa.gz.gzi  part-00241-61a0abbf-fbf9-444f-8287-4e46ad4b9b7b-c000.vcf
resources/MMRF_benchmark/: MMRF_TARGET_dataset.vcf
resources/TCGA_benchmark/: tcga_dataset.vcf
resources/test_files/: test_variants.vcf  test_variants_minus.vcf  variants.vcf
resources/test_output_files/: cds_df_test.tsv  create_reference_CDS.tsv  final_ptc_analysis.tsv  transcript_sequences.tsv  variant_exon_output.tsv  variants_nmd_results.csv
scripts/: README.md  create_test_VCF.ipynb  nmd-vep.ipynb  train.ipynb  validation_MMRF_TARGET.ipynb
src/nmd_scanner/: __init__.py  analyze_gtf.py  catch_sequence.py  cli.py  extra_features.py  rules.py  scan.py
tests/: test_extra_features.py  test_main.py  test_rules.py  test_scan.py
