[project]
name = "nmd_scanner"
version = "0.1.0"
description = "A simple scanner package for NMD"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    # Add your runtime dependencies here, e.g.
    # "requests >=2.25.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest >=7.0"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = [
    "--import-mode=importlib",
]

